# BA-Reversi-ML

./: README.md
Abschlussarbeit/: Abschlussarbeit.tex  literatur.bib
Abschlussarbeit/inhalt/: abstract.tex  erklaerung.tex
Abschlussarbeit/lib/: commands.tex  includes.tex
Binaries/: config.json  cpyRun.sh  csvToLatex.py  run.sh
Binaries/best_models/: current_model.index
Tabellen/: Hybrids_vs_MCTS.xlsx  Hybrids_vs_Trivial.xlsx  MCTSKeepTree.xlsx  Mcts_vs_Triv.xlsx  NN_vs_Trivial.xlsx
src/Reversi/: Doxyfile  Makefile  Reversi.cpp
src/Reversi/DecisionMaker/: DecisionMaker.cpp  DecisionMaker.h
src/Reversi/Game/: Game.cpp  Game.h  Point.cpp  Point.h
src/Reversi/MCTS/: MCTS.cpp  MCTS.h  MCTS_Hybrids.cpp  MCTS_Hybrids.h  MCTS_Solver.cpp
src/Reversi/MiniMax/: Heuristic.cpp  Heuristic.h  MiniMax.cpp  MiniMax.h
src/Reversi/Network/: Network.cpp  Network.h
src/Reversi/Utils/: Helper.cpp  Helper.h  Node.cpp  Node.h  Utils.cpp  Utils.h
src/Reversi/cpy/: Helper.py  PyDecisionMaker.pxd  PyGame.pxd  PyHeuristic.pxd  PyMCTS.pxd  PyMCTS_Hybrids.pxd  PyMiniMax.pxd  PyNetwork.pxd  PyNode.pxd  PyPoint.pxd  PyUtils.pxd  config.py  evaluate.pyx  logger.py  mcts.pyx  model.py
src/TestReversi/: CMakeLists.txt  README.md  Test_DecisionMaker.cpp  Test_Game.cpp  Test_Heuristic.cpp  Test_MCTS.cpp  Test_MCTS_Hybrids.cpp  Test_MiniMax.cpp  Test_Node.cpp  Test_Point.cpp  Test_Utils.cpp
